k8s/istio-deployment.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingress-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpd-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingress-gateway
  http:
    - match:
        - uri:
            prefix: /httpd
      route:
        - destination:
            host: httpd-service
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tomcat-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingress-gateway
  http:
    - match:
        - uri:
            prefix: /tomcat
      route:
        - destination:
            host: tomcat-service
            port:
              number: 8080
